--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
+POSTGRES_HOST=localhost
+POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=senha123
 POSTGRES_DB=blx-nest-api
 PORT=3000
