--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=senha123
 POSTGRES_DB=blx-nest-api
 PORT=3000
+HASH_SALT=10
+JWT_KEY=hsa7dsa8dsagdsa8721712
+JWT_EXPIRES=365d
