--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ POSTGRES_PASSWORD=senha123
 POSTGRES_DB=blx-nest-api
 PORT=3000
 HASH_SALT=10
-JWT_KEY=hsa7dsa8dsagdsa8721712
-JWT_EXPIRES=365d
+JWT_SECRET=jkjfdskfll304989dffjdfjldkr303390sdlkfjk
+ENCRYPT_JWT_SECRET=fkdsjfldfj384u348vsfjdfjdfhjerrww
+JWT_EXPIRATION=1d
